src/components/Select/Select.module.css
@import '../../design-tokens/mixins.css';

/*------------------------------------*\
    # SELECT
\*------------------------------------*/

/**
 * Select field used to select one option from a list of options.
 */
.select {
  position: relative;
}

/**
 * Wraps the Label and the optional/required hint.
 */
.select__overline {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  margin-bottom: calc(var(--eds-spacing-size-half) * 1px);
  gap: calc(var(--eds-spacing-size-half) * 1px);
}

.select__overline--no-label {
  justify-content: flex-start;
}

/**
 * The container for the individual select options. 
 */
.select__options {
  max-height: 25vh;
  z-index: var(--eds-z-index-top);
}

.select--label-layout-vertical {
  flex-direction: column;
}

.select--label-layout-horizontal {
  display: flex;
  flex-direction: row;
  align-items: baseline;

  gap: calc(var(--eds-spacing-size-1) * 1px);
}

/**
 * The button to trigger the display of the select field.
 */
.select-button {
  width: 100%;
  padding: calc(var(--eds-spacing-size-1-and-half) * 1px);

  border: 1px solid;
  border-radius: calc(var(--eds-theme-border-radius-objects-sm) * 1px);

  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: calc(var(--eds-spacing-size-1) * 1px);

  cursor: pointer;

  color: light-dark(var(--eds-theme-color-text-utility-default-primary), var(--eds-dark-theme-color-text-utility-default-primary));
  background-color: light-dark(var(--eds-theme-color-background-input), var(--eds-dark-theme-color-background-input));
}

/**
 * The caret icon to decorate the select trigger button, animated to rotate.
 */
.select-button__icon {
  flex-shrink: 0;
  transform: rotate(0);

  transition: transform calc(var(--eds-anim-move-medium) * 1s) ease-out;

  @media (prefers-reduced-motion) {
    transition: none;
  }
}

.select-button__text--truncated {
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.select-button__icon--reversed {
  transform: rotate(180deg);
}

.select__footer {
  display: flex;
  justify-content: space-between;
}

.select--has-fieldNote {
  margin-bottom: calc(var(--eds-spacing-size-half) * 1px);
}


/**
 * Label on top of the select trigger button to label the select field.
 */
.select__label {
  color: light-dark(var(--eds-theme-color-text-utility-default-primary), var(--eds-dark-theme-color-text-utility-default-primary));
}

.select__subLabel {
  color: light-dark(var(--eds-theme-color-text-utility-default-secondary), var(--eds-dark-theme-color-text-utility-default-secondary));
  flex: 1 0 100%;
}

.select__label--disabled {
  color: light-dark(var(--eds-theme-color-text-utility-disabled-primary), var(--eds-dark-theme-color-text-utility-disabled-primary));
}

.select__option {
  color: light-dark(var(--eds-theme-color-text-utility-interactive-secondary), var(--eds-dark-theme-color-text-utility-interactive-secondary));
}

.select__option-text {
  color: light-dark(var(--eds-theme-color-text-utility-default-primary), var(--eds-dark-theme-color-text-utility-default-primary));
}

.select__required-text {
  color: light-dark(var(--eds-theme-color-text-utility-default-secondary), var(--eds-dark-theme-color-text-utility-default-secondary));
}

.select-button:disabled {
  cursor: not-allowed;

  color: light-dark(var(--eds-theme-color-text-utility-disabled-primary), var(--eds-dark-theme-color-text-utility-disabled-primary));
  border-color: light-dark(var(--eds-theme-color-border-utility-disabled), var(--eds-dark-theme-color-border-utility-disabled));
  background-color: light-dark(var(--eds-theme-color-background-utility-disabled-low-emphasis), var(--eds-dark-theme-color-background-utility-disabled-low-emphasis));
}

.select-button:focus-visible {
  border-color: light-dark(var(--eds-theme-color-border-utility-focus), var(--eds-dark-theme-color-border-utility-focus));
  outline: 1px solid light-dark(var(--eds-theme-color-border-utility-focus), var(--eds-dark-theme-color-border-utility-focus));
}

.select-button--error {
  border-color: light-dark(var(--eds-theme-color-border-utility-critical), var(--eds-dark-theme-color-border-utility-critical));

  &:hover {
    border-color: light-dark(var(--eds-theme-color-border-utility-critical-hover), var(--eds-dark-theme-color-border-utility-critical-hover));
  }

  &:focus-visible {
    border-color: light-dark(var(--eds-theme-color-border-utility-critical), var(--eds-dark-theme-color-border-utility-critical));
    outline: 1px solid light-dark(var(--eds-theme-color-border-utility-critical), var(--eds-dark-theme-color-border-utility-critical));
  }
}

.select-button--warning {
  border-color: light-dark(var(--eds-theme-color-border-utility-warning), var(--eds-dark-theme-color-border-utility-warning));

  &:hover {
    border-color: var(--eds-theme-color-border-utility-warning-hover);
  }

  &:focus-visible {
    border-color: light-dark(var(--eds-theme-color-border-utility-warning), var(--eds-dark-theme-color-border-utility-warning));
    outline: 1px solid light-dark(var(--eds-theme-color-border-utility-warning), var(--eds-dark-theme-color-border-utility-warning));
  }
}

.select__required-text--disabled {
  color: light-dark(var(--eds-theme-color-text-utility-disabled-primary), var(--eds-dark-theme-color-text-utility-disabled-primary));
}

